add publisher confirms

--- a/producer/src/main/resources/application.properties
+++ b/producer/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 spring.application.name=producer
 
-spring.rabbitmq.host=rabbitmq
+spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+
+spring.rabbitmq.publisher-confirm-type=correlated
+spring.rabbitmq.publisher-returns=true
 
 rabbitmq.exchange=TestExchange
 rabbitmq.routing-key=message
